--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,8 @@ pyyaml==3.12
 py-dateutil==2.2.0
 # sqlalchemy is used by manifest
 sqlalchemy==1.2.8
-
+pymysql==0.8.1
+# boto3 is used by aws_tools
+boto3==1.7.40
+#gogs_client is used by gogs_tools
+gogs_client==1.0.6
