--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: python
 python:
-  - '3.6.5'
+  - '3.6'
 
-before_install:
-  - pip install awscli
-  - scripts/travis_install_apex.sh
+#before_install:
+  #- pip install awscli
+  #- scripts/travis_install_apex.sh
 
 install:
   - pip install -r test_requirements.txt
