--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: python
+# See available versions at https://docs.travis-ci.com/user/languages/python/
 python:
   - '3.6'
-  - '3.7'
+#  - '3.7-dev' # rq fails
 
 #before_install:
   #- pip install awscli
