--- a/.travis.yml
+++ b/.travis.yml
@@ -22,8 +22,8 @@ services:
   #- scripts/travis_install_apex.sh
 
 install:
-  - pip3 install --requirement test_requirements.txt
-  - pip3 install coveralls
+  - pip install --requirement test_requirements.txt
+  - pip install coveralls
 
 # Run the tests first
 #  and if they succeed, make the docker image(s)
@@ -31,7 +31,7 @@ install:
 script:
   #- coverage run -m unittest discover -s tests/
   # NOTE: The full tests above are temporarily disabled (for testing the docker parts)
-  - coverage run -m unittest discover -s tests/global_settings_tests/
+  - coverage run -m unittest discover -s tests
 
 # Only execute the following instructions in the case of a success
 #  (failing at this point won't mark the build as a failure).
