--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ install:
 script:
   #- coverage run -m unittest discover -s tests/
   # NOTE: The full tests above are temporarily disabled (for testing the docker parts)
-  - coverage run -m unittest discover -s tests/global_settings_tests/
+  - coverage run -m unittest discover -s tests/
   - make image
 
 # Only execute the following instructions in the case of a success
