--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ py-dateutil==2.2.0
 # sqlalchemy is used by manifest
 sqlalchemy==1.2.9
 pymysql==0.8.1
+# NOTE: pymysql 0.9.2 wouldn't work in docker build
 
 # boto3 is used by aws_tools
 boto3==1.7.55
