--- a/.travis.yml
+++ b/.travis.yml
@@ -30,11 +30,7 @@ install:
 # Run the tests first
 #  and if they succeed, make the docker image(s)
 #   (and check that both succeed)
-script:
-  #- coverage run -m unittest discover -s tests/
-  # NOTE: The full tests above are temporarily disabled (for testing the docker parts)
-  - coverage run -m unittest discover -s tests/
-  - make image
+script: coverage run -m unittest discover -v -s tests/ && make image
 
 # Only execute the following instructions in the case of a success
 #  (failing at this point won't mark the build as a failure).
