--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,8 @@ install:
 # Run the tests first
 #  and if they succeed, make the docker image(s)
 #   (and check that both succeed)
-script: coverage run -m unittest discover -v -s tests/ && make image
+script: 
+  - coverage run -m unittest discover -v -s tests/ && make image
 
 # Only execute the following instructions in the case of a success
 #  (failing at this point won't mark the build as a failure).
@@ -40,11 +41,20 @@ script: coverage run -m unittest discover -v -s tests/ && make image
 #  and then change the environment in the settings pannel.
 after_success:
   - coveralls
-  - if [[ "$TRAVIS_BRANCH" == "master" ]]; then
-      docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD ;
-      make pushImage ;
-    fi
 
 env:
   global:
     - PYTHONDONTWRITEBYTECODE=true
+
+deploy:
+  - provider: script
+    skip_cleanup: true
+    script: bash ./deploy.sh develop
+    on:
+      branch: develop
+  - provider: script
+    skip_cleanup: true
+    script: bash ./deploy.sh master
+    on:
+      branch: master
+
