--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ language: python
 python:
   - '3.6'
   - '3.7-dev'
+  - 'nightly'
 
 services:
   - docker
@@ -30,7 +31,7 @@ install:
 # Run the tests first
 #  and if they succeed, make the docker image(s)
 #   (and check that both succeed)
-script: 
+script:
   - coverage run -m unittest discover -v -s tests/
 
 # Only execute the following instructions in the case of a success
