--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ python:
   - '3.6'
   - '3.7-dev'
   - 'nightly'
+# NOTE: We only deploy on ONE of these tests being successful -- see condition below
 
 services:
   - docker
@@ -53,9 +54,11 @@ deploy:
     script: bash ./deploy.sh develop
     on:
       branch: develop
+      condition: $TRAVIS_PYTHON_VERSION == '3.6'
   - provider: script
     skip_cleanup: true
     script: bash ./deploy.sh master
     on:
       branch: master
+      condition: $TRAVIS_PYTHON_VERSION == '3.6'
 
