--- a/requirements.txt
+++ b/requirements.txt
@@ -12,9 +12,9 @@ pyyaml==5.1.1
 # dateutil is used by file_utils used by ResourceContainer
 py-dateutil==2.2
 
-# sqlalchemy is used by manifest
+# sqlalchemy is used by manifest and pymysql must be used by sqlalchemy
 sqlalchemy==1.3.6
-# pymysql==0.9.3
+pymysql==0.9.3
 
 # boto3 is used by aws_tools
 boto3==1.9.196
