--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,15 @@ myVenv/
 # Scripts
 setENVs.sh
 
+# mypy
+.mypy_cache/
+
+# MonkeyType
+monkeytype.sqlite3
+
 # Sonar
 sonar-project.properties
 .scannerwork/
+
+# Script to set environment variables
+setENVs.sh
