--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,14 @@
 # .travis.yml
 #
-# Requires the following environment variables to be set:
+# Requires the following environment variables to be set in the Travis settings:
 #   QUEUE_PREFIX
 #   TX_DATABASE_PW
 #   AWS_ACCESS_KEY_ID
 #   ASW_SECRET_ACCESS_KEY
-##   DOCKER_USERNAME
-##   DOCKER_PASSWORD
+#   DOCKER_USERNAME
+#   DOCKER_PASSWORD
 
-dist: xenial
+dist: bionic
 language: python
 # See available versions at https://docs.travis-ci.com/user/languages/python/
 python:
