--- a/Dockerfile-developBranch
+++ b/Dockerfile-developBranch
@@ -13,6 +13,7 @@ CMD [ "rq", "worker", "--config", "rq_settings", "--name", "D43_Dev_JobHandler" 
 
 # Define environment variables
 # NOTE: The following environment variables are expected to be set for testing:
+#   DB_ENDPOINT
 #	TX_DATABASE_PW
 #	AWS_ACCESS_KEY_ID
 #	AWS_SECRET_ACCESS_KEY
@@ -28,8 +29,8 @@ CMD [ "rq", "worker", "--config", "rq_settings", "--name", "D43_Dev_JobHandler" 
 
 
 #       To test (assuming that the confidential environment variables are already set in the current environment) use:
-#           docker run --env TX_DATABASE_PW --env AWS_ACCESS_KEY_ID --env AWS_SECRET_ACCESS_KEY --env QUEUE_PREFIX=dev- --env DEBUG_MODE=True --net="host" --name door43_job_handler --rm door43_job_handler:develop
+#           docker run --env DB_ENDPOINT --env TX_DATABASE_PW --env AWS_ACCESS_KEY_ID --env AWS_SECRET_ACCESS_KEY --env QUEUE_PREFIX=dev- --env DEBUG_MODE=True --net="host" --name door43_job_handler --rm door43_job_handler:develop
 
 
 #       To run in production use with the desired values:
-#           docker run --env TX_DATABASE_PW=<tx_db_pw> --env AWS_ACCESS_KEY_ID=<access_key> --env AWS_SECRET_ACCESS_KEY=<sa_key> --env GRAPHITE_HOSTNAME=<graphite_hostname> --env REDIS_URL=<redis_url> --net="host" --name door43_job_handler --detach --rm door43_job_handler:develop
+#           docker run --env DB_ENDPOINT --env TX_DATABASE_PW=<tx_db_pw> --env AWS_ACCESS_KEY_ID=<access_key> --env AWS_SECRET_ACCESS_KEY=<sa_key> --env GRAPHITE_HOSTNAME=<graphite_hostname> --env REDIS_URL=<redis_url> --net="host" --name door43_job_handler --detach --rm door43_job_handler:develop
