--- a/Dockerfile-masterBranch
+++ b/Dockerfile-masterBranch
@@ -13,6 +13,7 @@ CMD [ "rq", "worker", "--config", "rq_settings", "--name", "D43_JobHandler" ]
 
 # Define environment variables
 # NOTE: The following environment variables are expected to be set:
+#   DB_ENDPOINT
 #	TX_DATABASE_PW
 #	AWS_ACCESS_KEY_ID
 #	AWS_SECRET_ACCESS_KEY
@@ -28,4 +29,4 @@ CMD [ "rq", "worker", "--config", "rq_settings", "--name", "D43_JobHandler" ]
 
 
 #       To run in production use with the desired values:
-#           docker run --env TX_DATABASE_PW=<tx_db_pw> --env AWS_ACCESS_KEY_ID=<access_key> --env AWS_SECRET_ACCESS_KEY=<sa_key> --env GRAPHITE_HOSTNAME=<graphite_hostname> --env REDIS_URL=<redis_url> --net="host" --name door43_job_handler --detach --rm door43_job_handler:master
+#           docker run --env DB_ENDPOINT --env TX_DATABASE_PW=<tx_db_pw> --env AWS_ACCESS_KEY_ID=<access_key> --env AWS_SECRET_ACCESS_KEY=<sa_key> --env GRAPHITE_HOSTNAME=<graphite_hostname> --env REDIS_URL=<redis_url> --net="host" --name door43_job_handler --detach --rm door43_job_handler:master
