--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ language: python
 python:
   - '3.8'
   - '3.9-dev'
-  - 'nightly'
+  - 'nightly' # currently 3.10
 # NOTE: We only deploy on ONE of these tests being successful -- see condition below
 
 services:
