--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,10 @@ python:
   - 'nightly' # currently 3.10
 # NOTE: We only deploy on ONE of these tests being successful -- see condition below
 
+jobs:
+  allow_failures:
+  - python: nightly
+
 services:
   - docker
 
