--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,7 @@
-# rq and statsd/Graphite and requests are used by the job handler
-rq==1.9.0
-click==8.0.1
+flask-cors==3.0.10
+gunicorn==20.1.0
+pip-chill==1.0.1
+pylint==2.13.9
+rq==1.10.1
 statsd==3.3.0
-requests==2.24.0
-watchtower==0.8.0
-
-# yaml is used by file_utils used by ResourceContainer
-pyyaml==5.3.1
-
-# dateutil is used by data_utils used by ResourceContainer
-py-dateutil==2.2
-
-# sqlalchemy is used by manifest and pymysql must be used by sqlalchemy
-sqlalchemy==1.3.20
-pymysql==0.10.1
-
-# boto3 is used by aws_tools
-boto3==1.16.1
-
-#gogs_client is used by gogs_tools
-gogs_client==1.0.6
-
-# For templating
-beautifulsoup4==4.9.3
+watchtower==3.0.0
