--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,9 @@ flask-cors==3.0.10
 gunicorn==20.1.0
 pip-chill==1.0.1
 pylint==2.13.9
+pyyaml==6.0
+requests==2.27.1
 rq==1.10.1
+sqlalchemy==1.4.36
 statsd==3.3.0
 watchtower==3.0.0
