--- a/Dockerfile-masterBranch
+++ b/Dockerfile-masterBranch
@@ -10,7 +10,9 @@ RUN apk add --no-cache --virtual .build-deps gcc g++
 RUN pip3 install --upgrade pip
 RUN pip3 install --requirement requirements.txt
 
-CMD [ "rq", "worker", "--config", "rq_settings", "--name", "D43_JobHandler" ]
+ENV WORKER_NAME "worker-1"
+
+CMD [ "rq", "worker", "--config", "rq_settings", "--name", $WORKER_NAME ]
 
 # Define environment variables
 # NOTE: The following environment variables are expected to be set:
