--- a/Dockerfile-masterBranch
+++ b/Dockerfile-masterBranch
@@ -12,7 +12,7 @@ RUN pip3 install --requirement requirements.txt
 
 ENV WORKER_NAME "worker-1"
 
-CMD [ "rq", "worker", "--config", "rq_settings", "--name", $WORKER_NAME ]
+CMD rq worker --config rq_settings --name $WORKER_NAME
 
 # Define environment variables
 # NOTE: The following environment variables are expected to be set:
