--- a/Dockerfile-developBranch
+++ b/Dockerfile-developBranch
@@ -10,9 +10,10 @@ RUN apk add --no-cache --virtual .build-deps gcc g++
 RUN pip3 install --upgrade pip
 RUN pip3 install --requirement requirements.txt
 
-ENV WORKER_NAME "worker-1"
+ENV WORKER_NAME="worker-1"
+ENV WITH_SCHEDULER=""
 
-CMD rq worker --config rq_settings --with-scheduler --name $WORKER_NAME
+CMD rq worker --config rq_settings --name $WORKER_NAME $WITH_SCHEDULER
 
 # Define environment variables
 # NOTE: The following environment variables are expected to be set for testing:
